add delete message feature